--- a/Mushoku Tensei/css/estilo.css
+++ b/Mushoku Tensei/css/estilo.css
@@ -166,12 +166,13 @@
     padding: 10px;
     height: auto;
     margin: 20px;
+    width: 100%;
 
 }
 .temporada-contenido1
 {
     display: grid;
-    grid-template-columns:1fr auto;
+    grid-template-columns:1fr 0.5fr;
     grid-template-rows: auto auto;
     justify-items: center;
     align-items: center;
@@ -210,8 +211,7 @@
 }
 .temporada-contenido1 p, .temporada-contenido2 p{
 
-    margin-left: 15px;
-    margin-right: 15px;
+    margin: 20px;
 }
 .temporada-contenido1 .video{
     grid-column: 2;
@@ -223,7 +223,7 @@
     grid-column: 1;
     grid-row: 2;
     display: grid;
-    grid-template-columns:1fr auto;
+    grid-template-columns:1fr 0.5fr;
     grid-template-rows: auto auto;
     row-gap: 10px;
     justify-items: center;
@@ -250,8 +250,8 @@
     grid-row: 2;
 }
 .video{
-    width: 500px;
-    height: 300px;
+    width: auto;
+    height: auto;
 }
 /*----------------------------------------------------------------------*/
 .pie{
@@ -275,4 +275,84 @@
 }
 .pie .red:hover{
     transform: scale(1.2);
+}
+
+@media screen and (max-width:1024px){
+    .temporada-contenido1{
+        grid-template-columns: auto;
+        grid-template-rows: 1fr 1fr auto;
+    }
+    .t1{
+        grid-column: 1;
+        grid-row: 1;
+    }
+    .t1-2{
+        grid-column: 1;
+        grid-row: 2;
+        }
+    .t1 p, .t1-2 p{
+        font-size: 0.7em;
+    }
+    .temporada-contenido1 .videot1{
+        grid-column: 1;
+        grid-row: 3;
+    }
+
+    .temporada-contenido2{
+        grid-template-columns: auto auto;
+        grid-template-rows: 1fr 1fr auto;
+    }
+    .t2{
+        grid-column: 1 / span 2;
+        grid-row: 1;
+    }
+    .t2-2{
+        grid-column: 1 /span 2;
+        grid-row: 2;
+    }
+    .t2 p, .t2-2 p{
+        font-size: 0.7em;
+    }
+    .temporada-contenido2 .videot2-1{
+        grid-column: 1;
+        grid-row: 3;
+    }
+    .temporada-contenido2 .videot2-2{
+        grid-column: 2;
+        grid-row: 3;
+    }
+}
+@media screen and (max-width:680px){
+    .temporada-contenido2{
+        grid-template-columns: auto;
+        grid-template-rows: 1fr 1fr auto auto;
+    }
+    .t2{
+        grid-column: 1;
+        grid-row: 1;
+    }
+    .t2-2{
+        grid-column: 1;
+        grid-row : 2;
+    }
+    .temporada-contenido2 .videot2-1{
+        grid-column: 1;
+        grid-row: 3;
+    }
+    .temporada-contenido2 .videot2-2{
+        grid-column: 1;
+        grid-row: 4;
+    }
+}
+@media screen and (max-width:320px){
+    .sipnosis .texto-sipnosis p{
+        font-size: 0.7em;
+    }
+    .carta{
+        width: 8em;
+        height: 12em;
+    }
+    .personajes .nombre{
+        font-size: 0.5em;
+    }
 }
